WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283945
Compilation failure error: member access into incomplete type 'const WebCore::RenderStyle'
https://bugs.webkit.org/show_bug.cgi?id=283945
Summary
Compilation failure error: member access into incomplete type 'const WebCore:...
Jean-Yves Avenard [:jya]
Reported
2024-12-02 14:53:22 PST
``` In file included from /Volumes/Data/worker/macOS-Ventura-Release-Build-EWS/build/WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource357.cpp:1: /Volumes/Data/worker/macOS-Ventura-Release-Build-EWS/build/Source/WebCore/platform/graphics/coretext/FontCascadeCoreText.cpp:522:19: error: member access into incomplete type 'const WebCore::RenderStyle' return !(style.textShadow() && !style.color().isVisible()); In file included from /Volumes/Data/worker/macOS-Ventura-Release-Build-EWS/build/WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource357.cpp:1: In file included from /Volumes/Data/worker/macOS-Ventura-Release-Build-EWS/build/Source/WebCore/platform/graphics/coretext/FontCascadeCoreText.cpp:24: /Volumes/Data/worker/macOS-Ventura-Release-Build-EWS/build/Source/WebCore/platform/graphics/FontCascade.h:55:7: note: forward declaration of 'WebCore::RenderStyle' class RenderStyle; In file included from /Volumes/Data/worker/macOS-Ventura-Release-Build-EWS/build/WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource357.cpp:1: /Volumes/Data/worker/macOS-Ventura-Release-Build-EWS/build/Source/WebCore/platform/graphics/coretext/FontCascadeCoreText.cpp:522:42: error: member access into incomplete type 'const WebCore::RenderStyle' ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-02 14:55:27 PST
<
rdar://problem/140817964
>
Jean-Yves Avenard [:jya]
Comment 2
2024-12-02 14:59:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37346
EWS
Comment 3
2024-12-02 15:02:15 PST
Committed
287237@main
(3108ecd96d79): <
https://commits.webkit.org/287237@main
> Reviewed commits have been landed. Closing PR #37346 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug