Compilation failure error: member access into incomplete type 'const WebCore::RenderStyle' https://bugs.webkit.org/show_bug.cgi?id=283945 rdar://140817964

Unreviewed unified build fix.

Add missing header.

* Source/WebCore/platform/graphics/coretext/FontCascadeCoreText.cpp:

Canonical link: https://commits.webkit.org/287237@main